welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:15: error: illegal start of simple pattern
	for ((<- 0 to getMondeHauteur() - 1) {
              ^Array2:21: error: ')' expected but '}' found.
}
^